<resources>
    <string name="app_name">Todo Reminder</string>

    <!-- Welcome & Login -->
    <string name="welcome">Welcome</string>
    <string name="welcome_title_app">Todo reminder App</string>
    <string name="welcome_title_description">Never forget what TODO and WHERE to go next!</string>
    <string name="welcome_login_button">Login</string>
    <string name="logged_in_user">Hello, %s</string><!-- for more than one variables %1$s %2$s, etc -->
    <string name="login_choose_text">Please choose login method!</string>

    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="reset">Reset List</string>
    <string name="sure_to_delete">Are you sure you want to delete all data. This action cannot be undone!</string>
    <string name="i_am_sure">YES, i\'m sure!</string>
    <string name="not_sure">NO! Do not Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="lat_long_title">Lat: %1$.3f, Long: %2$.3f</string>
    <string name="dropped_pin">Custom Location</string>
    <string name="dropped_poi">POI Selected</string>
    <string name="description_location_text">Location:</string>
    <string name="description_description_text">Description:</string>
    <string name="select_poi_location">Please select a point of interest or any location</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location. Please open settings screen to modify app permissions</string>
    <string name="select_location_confirm_button">Confirm</string>
    <string name="detail_reminder_back">Back</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="settings">Settings</string>
    <string name="geofence_added">Geofence Added</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="geofence_removed">Geofence removed</string>
    <string name="geofence_not_removed">Geofence not removed</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="icons_attribution"><a href="https://www.freepik.com/vectors/design">Design vector created by freepik - www.freepik.com</a></string>

    <!-- Error strings -->
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_not_added">Problem in adding geofences.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_no_title">Please go back and provide a title to your Reminder</string>
    <string name="err_select_location">Please select location</string>

</resources>