<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_dark_background"
        android:padding="@dimen/padding_large"
        tools:context=".authentication.AuthenticationActivity">

        <LinearLayout
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_box"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_xlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/welcome"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/welcome_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/welcome_title_app"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/welcome_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/welcome_title_description"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/welcome_login_button"
            android:textColor="@android:color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/center_text"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/logged_in_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged_in_user"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/center_text"
            app:layout_constraintVertical_bias="0.25"
            tools:text="Hello, Helder Ventura" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>